[refactor] #26 -history API 호출 시, 정원 공유할 때 저장된 redis key 값 지우도록 리팩토링