@@ -111,6 +111,7 @@ public class UserService {
      * 1. 중복되지 않고 랜덤하게 나무 정보를 가져온다.
      **/
 
+    @Transactional
     public List<UserTreeListResponse> getUserTreeList(PrincipalUserDetails principalUserDetails, int page, int size) {
         // 인증
         User user = validateUser(principalUserDetails);
@@ -129,7 +130,11 @@ public class UserService {
         Page<Tree> trees = treeJpaRepository.findAll(spec, pageable);
 
         // 조회된 나무 ID 목록을 Redis에 저장
-        Set<Integer> treeIds = trees.getContent().stream().map(Tree::getId).collect(Collectors.toSet());
+        Set<Integer> treeIds = trees.
+                getContent()
+                .stream()
+                .map(Tree::getId)
+                .collect(Collectors.toSet());
 
         if (!treeIds.isEmpty()) {
             redisService.addExcludedIds(String.valueOf(user.getId()), treeIds);
@@ -139,7 +144,7 @@ public class UserService {
                 .getContent()
                 .stream()
                 .map(tree -> new UserTreeListResponse(tree.getUser().getId(), tree.getId(), tree.getName(), tree.getImageUrl()))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
@@ -165,15 +170,19 @@ public class UserService {
                 .getContent()
                 .stream()
                 .map(treePost -> new UserTreeDetailResponse(treePost.getId(), treePost.getImageUrl(), treePost.getContent(), treePost.getCreatedAt()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * 나의 히스토리 목록 보기 ( 최신순 )
      * **/
+    @Transactional
     public List<UserHistoryListResponse> getUserHistories(PrincipalUserDetails principalUserDetails, int page, int size) {
         // 인증
         User user = validateUser(principalUserDetails);
+
+        // redis 에 존재하는 자신의 나무 id 목록 지우기
+        redisService.deleteValues(String.valueOf(user.getId()));
 
         // 나의 히스토리 목록 조회해서 가져오기
         Pageable pageable = PageRequest.of(page, size, Sort.by("id").descending());
@@ -185,6 +194,6 @@ public class UserService {
                 .getContent()
                 .stream()
                 .map(treePost -> new UserHistoryListResponse(treePost.getId(), treePost.getImageUrl(), treePost.getContent(), treePost.getCreatedAt()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
